Fix header z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1330,7 +1330,7 @@ blockquote:last-child {
 	position: fixed;
 	left: 0;
 	width: 100%;
-	z-index: 1000;
+	z-index: 9999;
 	padding: 14px 0 16px;
 	transition: top 0.4s;
 	transition: background 0.4s;
@@ -1712,7 +1712,7 @@ div.header__bar.extranav {
 	background: url("/assets/css/images/temp/lines-blue-edge.png") no-repeat top -325px
 		right 0;
 	background-size: 778px 436px;
-	z-index: 99;
+	/* z-index: 99; */
 	background-color: #fff;
 }
 
@@ -6021,7 +6021,7 @@ input:-webkit-autofill {
 .section-features .section__cols {
 	padding-right: 105px;
 	position: relative;
-	z-index: 10;
+	/* z-index: 10; */
 }
 
 .section-features .section__content-dark {
